# online-inference-platform-demo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml  reusable-build.yml  reusable-helm-lint.yml  reusable-lint.yml  reusable-release.yml  reusable-test.yml
.gitlab/ci/templates/: build.yml  helm-lint.yml  lint.yml  release.yml  test.yml
charts/online-inference/: Chart.yaml  values.yaml
charts/online-inference/templates/: NOTES.txt  _helpers.tpl  analysis-template.yaml  configmap.yaml  deployment.yaml  grafana.yaml  hpa.yaml  ingress.yaml  jaeger.yaml  keda-scaledobject.yaml  otel-collector.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml  (+6 more)
deploy/argocd/: app-of-apps.yaml  application.yaml
deploy/flux/: helmrelease.yaml  kustomization.yaml  source.yaml
deploy/k8s/: 10-redis.yaml  20-inference-api.yaml  25-inference-worker.yaml  26-inference-worker-svc.yaml  30-otel-collector.yaml  40-jaeger.yaml  50-prometheus.yaml  60-grafana.yaml  70-hpa.yaml  80-keda-worker-scaledobject.yaml
grafana/dashboards/: inference-dashboard.json
infrastructure/: README.md
infrastructure/live/: terragrunt.hcl
infrastructure/scripts/: init-aws-backend.sh
load/: k6.js
otel/: otel-collector-config.yaml
prometheus/: prometheus.yml
services/inference-api/: Dockerfile  main.py  requirements-dev.txt  requirements.txt
services/inference-worker/: Dockerfile  requirements.txt  worker.py
(+31 files in other folders)
