[project]
name = "online-inference-platform-demo"
version = "0.1.0"
description = "Production-pattern ML inference platform demo"
readme = "README.md"
requires-python = ">=3.12.13,<=3.13.7"
dependencies = [
    "fastapi>=0.136.3",
    "opentelemetry-distro>=0.63b1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "pre-commit>=4.6.0",
    "prometheus-client>=0.25.0",
    "pytest>=9.0.3",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "ruff>=0.15.12",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
]
